--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -478,8 +478,8 @@
     <div class="container-xl">
         <div class="row justify-content-center mb-5">
             <div class="col-md-7 heading-section text-center" data-aos="fade-up" data-aos-duration="1000">
-                <span class="subheading">Our Blog</span>
-                <h2>Recent From Blog</h2>
+                <span class="subheading">NEWS</span>
+                <h2>Recent News</h2>
             </div>
         </div>
         <div class="row justify-content-center">
