--- a/templates/base.html
+++ b/templates/base.html
@@ -179,9 +179,10 @@
                 </div>
                 <div class="col-md-6 col-lg">
                     <div class="ftco-footer-widget mb-4">
-                        <h2 class="ftco-heading-2">Recent Posts</h2>
+                        <h2 class="ftco-heading-2">Recent News</h2>
+                        {% for post in news %}
                         <div class="block-21 mb-4 d-flex">
-                            <a class="blog-img img rounded" style="background-image: url('{% static "images/image_1.jpg" %}');"></a>
+                            <a class="blog-img img rounded" style="background-image: url('{{ post.image.url }}');"></a>
                             <div class="text">
                                 <div class="meta">
                                     <div><a href="#"><span class="fa fa-calendar"></span> Jan. 18, 2021</a></div>
@@ -190,26 +191,7 @@
                                 <h3 class="heading"><a href="#">Creativity and Inspiration</a></h3>
                             </div>
                         </div>
-                        <div class="block-21 mb-4 d-flex">
-                            <a class="blog-img img rounded" style="background-image: url('{% static "images/image_2.jpg" %}');"></a>
-                            <div class="text">
-                                <div class="meta">
-                                    <div><a href="#"><span class="fa fa-calendar"></span> Jan. 18, 2021</a></div>
-                                    <div><a href="#"><span class="fa fa-user"></span> Admin</a></div>
-                                </div>
-                                <h3 class="heading"><a href="#">Creativity and Inspiration</a></h3>
-                            </div>
-                        </div>
-                        <div class="block-21 mb-4 d-flex">
-                            <a class="blog-img img rounded" style="background-image: url('{% static "images/image_4.jpg" %}');"></a>
-                            <div class="text">
-                                <div class="meta">
-                                    <div><a href="#"><span class="fa fa-calendar"></span> Jan. 18, 2021</a></div>
-                                    <div><a href="#"><span class="fa fa-user"></span> Admin</a></div>
-                                </div>
-                                <h3 class="heading"><a href="#">Creativity and Inspiration</a></h3>
-                            </div>
-                        </div>
+                        {% endfor %}
                     </div>
                 </div>
                 <div class="col-md-6 col-lg">
